# jarvis

./: .gitignore  NLU.py  README.md  commands.json  elements_extractor.py  gemini.py  hey_gemini.py  information_retrieval.py  intent_commands.json  jarvis.py  keys.json  live_tutorial.py  nlp.py  pyproject.toml  server.py  text_to_speech.py
apis/: load_api.py  news_info.py  weather_info.py
jarvis/: app.py  jarvis.py  jarvis_service.py  server.py
jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jarvis/apis/: __init__.py  currency_info.py  stock_info.py  weather_info.py
jarvis/modules/: __init__.py  chatbot.py  commands.py  cv.py  talk.py  web_scraping.py
jarvis/modules/system_commands/: apple_command.py  commands.py  windows_command.py
modules/: __init__.py  applescript.py  talk.py  voice_recognition.py  web_scraping.py
