[project]
name = "jarvis"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "Flask", "SpeechRecognition", "pyaudio", "gtts", "openai", "transformers",
    "torch", "vertexai", "google-cloud-aiplatform", "selenium",
    "webdriver_manager", "google", "python-dotenv", "tensorflow", "ttkthemes",
    "pyttsx3", "pywin32", pywin64"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "playground*", "scripts*", "tests*", "data*"]